--- a/pathlab.ipynb
+++ b/pathlab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,24 +163,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cProfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "llama_model_loader: loaded meta data with 36 key-value pairs and 197 tensors from ./models/Phi-3.5-mini-instruct.Q8_0.gguf (version GGUF V3 (latest))\n",
+      "llama_model_loader: Dumping metadata keys/values. Note: KV overrides do not apply in this output.\n",
+      "llama_model_loader: - kv   0:                       general.architecture str              = phi3\n",
+      "llama_model_loader: - kv   1:                               general.type str              = model\n",
+      "llama_model_loader: - kv   2:                               general.name str              = Phi 3.5 Mini Instruct\n",
+      "llama_model_loader: - kv   3:                           general.finetune str              = instruct\n",
+      "llama_model_loader: - kv   4:                           general.basename str              = Phi-3.5\n",
+      "llama_model_loader: - kv   5:                         general.size_label str              = mini\n",
+      "llama_model_loader: - kv   6:                            general.license str              = mit\n",
+      "llama_model_loader: - kv   7:                       general.license.link str              = https://huggingface.co/microsoft/Phi-...\n",
+      "llama_model_loader: - kv   8:                               general.tags arr[str,3]       = [\"nlp\", \"code\", \"text-generation\"]\n",
+      "llama_model_loader: - kv   9:                          general.languages arr[str,1]       = [\"multilingual\"]\n",
+      "llama_model_loader: - kv  10:                        phi3.context_length u32              = 131072\n",
+      "llama_model_loader: - kv  11:  phi3.rope.scaling.original_context_length u32              = 4096\n",
+      "llama_model_loader: - kv  12:                      phi3.embedding_length u32              = 3072\n",
+      "llama_model_loader: - kv  13:                   phi3.feed_forward_length u32              = 8192\n",
+      "llama_model_loader: - kv  14:                           phi3.block_count u32              = 32\n",
+      "llama_model_loader: - kv  15:                  phi3.attention.head_count u32              = 32\n",
+      "llama_model_loader: - kv  16:               phi3.attention.head_count_kv u32              = 32\n",
+      "llama_model_loader: - kv  17:      phi3.attention.layer_norm_rms_epsilon f32              = 0.000010\n",
+      "llama_model_loader: - kv  18:                  phi3.rope.dimension_count u32              = 96\n",
+      "llama_model_loader: - kv  19:                        phi3.rope.freq_base f32              = 10000.000000\n",
+      "llama_model_loader: - kv  20:                          general.file_type u32              = 7\n",
+      "llama_model_loader: - kv  21:              phi3.attention.sliding_window u32              = 262144\n",
+      "llama_model_loader: - kv  22:              phi3.rope.scaling.attn_factor f32              = 1.190238\n",
+      "llama_model_loader: - kv  23:                       tokenizer.ggml.model str              = llama\n",
+      "llama_model_loader: - kv  24:                         tokenizer.ggml.pre str              = default\n",
+      "llama_model_loader: - kv  25:                      tokenizer.ggml.tokens arr[str,32064]   = [\"<unk>\", \"<s>\", \"</s>\", \"<0x00>\", \"<...\n",
+      "llama_model_loader: - kv  26:                      tokenizer.ggml.scores arr[f32,32064]   = [-1000.000000, -1000.000000, -1000.00...\n",
+      "llama_model_loader: - kv  27:                  tokenizer.ggml.token_type arr[i32,32064]   = [3, 3, 4, 6, 6, 6, 6, 6, 6, 6, 6, 6, ...\n",
+      "llama_model_loader: - kv  28:                tokenizer.ggml.bos_token_id u32              = 1\n",
+      "llama_model_loader: - kv  29:                tokenizer.ggml.eos_token_id u32              = 32000\n",
+      "llama_model_loader: - kv  30:            tokenizer.ggml.unknown_token_id u32              = 0\n",
+      "llama_model_loader: - kv  31:            tokenizer.ggml.padding_token_id u32              = 32000\n",
+      "llama_model_loader: - kv  32:               tokenizer.ggml.add_bos_token bool             = false\n",
+      "llama_model_loader: - kv  33:               tokenizer.ggml.add_eos_token bool             = false\n",
+      "llama_model_loader: - kv  34:                    tokenizer.chat_template str              = {% for message in messages %}{% if me...\n",
+      "llama_model_loader: - kv  35:               general.quantization_version u32              = 2\n",
+      "llama_model_loader: - type  f32:   67 tensors\n",
+      "llama_model_loader: - type q8_0:  130 tensors\n",
+      "llm_load_vocab: special tokens cache size = 14\n",
+      "llm_load_vocab: token to piece cache size = 0.1685 MB\n",
+      "llm_load_print_meta: format           = GGUF V3 (latest)\n",
+      "llm_load_print_meta: arch             = phi3\n",
+      "llm_load_print_meta: vocab type       = SPM\n",
+      "llm_load_print_meta: n_vocab          = 32064\n",
+      "llm_load_print_meta: n_merges         = 0\n",
+      "llm_load_print_meta: vocab_only       = 0\n",
+      "llm_load_print_meta: n_ctx_train      = 131072\n",
+      "llm_load_print_meta: n_embd           = 3072\n",
+      "llm_load_print_meta: n_layer          = 32\n",
+      "llm_load_print_meta: n_head           = 32\n",
+      "llm_load_print_meta: n_head_kv        = 32\n",
+      "llm_load_print_meta: n_rot            = 96\n",
+      "llm_load_print_meta: n_swa            = 262144\n",
+      "llm_load_print_meta: n_embd_head_k    = 96\n",
+      "llm_load_print_meta: n_embd_head_v    = 96\n",
+      "llm_load_print_meta: n_gqa            = 1\n",
+      "llm_load_print_meta: n_embd_k_gqa     = 3072\n",
+      "llm_load_print_meta: n_embd_v_gqa     = 3072\n",
+      "llm_load_print_meta: f_norm_eps       = 0.0e+00\n",
+      "llm_load_print_meta: f_norm_rms_eps   = 1.0e-05\n",
+      "llm_load_print_meta: f_clamp_kqv      = 0.0e+00\n",
+      "llm_load_print_meta: f_max_alibi_bias = 0.0e+00\n",
+      "llm_load_print_meta: f_logit_scale    = 0.0e+00\n",
+      "llm_load_print_meta: n_ff             = 8192\n",
+      "llm_load_print_meta: n_expert         = 0\n",
+      "llm_load_print_meta: n_expert_used    = 0\n",
+      "llm_load_print_meta: causal attn      = 1\n",
+      "llm_load_print_meta: pooling type     = 0\n",
+      "llm_load_print_meta: rope type        = 2\n",
+      "llm_load_print_meta: rope scaling     = linear\n",
+      "llm_load_print_meta: freq_base_train  = 10000.0\n",
+      "llm_load_print_meta: freq_scale_train = 1\n",
+      "llm_load_print_meta: n_ctx_orig_yarn  = 4096\n",
+      "llm_load_print_meta: rope_finetuned   = unknown\n",
+      "llm_load_print_meta: ssm_d_conv       = 0\n",
+      "llm_load_print_meta: ssm_d_inner      = 0\n",
+      "llm_load_print_meta: ssm_d_state      = 0\n",
+      "llm_load_print_meta: ssm_dt_rank      = 0\n",
+      "llm_load_print_meta: ssm_dt_b_c_rms   = 0\n",
+      "llm_load_print_meta: model type       = 3B\n",
+      "llm_load_print_meta: model ftype      = Q8_0\n",
+      "llm_load_print_meta: model params     = 3.82 B\n",
+      "llm_load_print_meta: model size       = 3.78 GiB (8.50 BPW) \n",
+      "llm_load_print_meta: general.name     = Phi 3.5 Mini Instruct\n",
+      "llm_load_print_meta: BOS token        = 1 '<s>'\n",
+      "llm_load_print_meta: EOS token        = 32000 '<|endoftext|>'\n",
+      "llm_load_print_meta: UNK token        = 0 '<unk>'\n",
+      "llm_load_print_meta: PAD token        = 32000 '<|endoftext|>'\n",
+      "llm_load_print_meta: LF token         = 13 '<0x0A>'\n",
+      "llm_load_print_meta: EOT token        = 32007 '<|end|>'\n",
+      "llm_load_print_meta: max token length = 48\n",
+      "llm_load_tensors: ggml ctx size =    0.21 MiB\n",
+      "llm_load_tensors: offloading 32 repeating layers to GPU\n",
+      "llm_load_tensors: offloading non-repeating layers to GPU\n",
+      "llm_load_tensors: offloaded 33/33 layers to GPU\n",
+      "llm_load_tensors:        CPU buffer size =    99.81 MiB\n",
+      "llm_load_tensors:      CUDA0 buffer size =  3772.59 MiB\n",
+      ".....................................................................................\n",
+      "llama_new_context_with_model: n_ctx      = 512\n",
+      "llama_new_context_with_model: n_batch    = 512\n",
+      "llama_new_context_with_model: n_ubatch   = 512\n",
+      "llama_new_context_with_model: flash_attn = 0\n",
+      "llama_new_context_with_model: freq_base  = 10000.0\n",
+      "llama_new_context_with_model: freq_scale = 1\n",
+      "ggml_backend_cuda_buffer_type_alloc_buffer: allocating 192.00 MiB on device 0: cudaMalloc failed: out of memory\n",
+      "llama_kv_cache_init: failed to allocate buffer for kv cache\n",
+      "llama_new_context_with_model: llama_kv_cache_init() failed for self-attention cache\n",
+      "[autoreload of path failed: Traceback (most recent call last):\n",
+      "  File \"/home/marco/miniconda3/envs/epfl/lib/python3.12/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/marco/miniconda3/envs/epfl/lib/python3.12/site-packages/IPython/extensions/autoreload.py\", line 475, in superreload\n",
+      "    module = reload(module)\n",
+      "             ^^^^^^^^^^^^^^\n",
+      "  File \"/home/marco/miniconda3/envs/epfl/lib/python3.12/importlib/__init__.py\", line 131, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 866, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 995, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
+      "  File \"/home/marco/Desktop/Coding/Varcode/EPFL/LLM-path-integral/path.py\", line 9, in <module>\n",
+      "    model = llama_cpp.Llama(\n",
+      "            ^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/marco/miniconda3/envs/epfl/lib/python3.12/site-packages/llama_cpp/llama.py\", line 391, in __init__\n",
+      "    _LlamaContext(\n",
+      "  File \"/home/marco/miniconda3/envs/epfl/lib/python3.12/site-packages/llama_cpp/_internals.py\", line 298, in __init__\n",
+      "    raise ValueError(\"Failed to create llama_context\")\n",
+      "ValueError: Failed to create llama_context\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "phrase = \"Italy\"\n",
     "k = 4\n",
     "max_depth = 5\n",
-    "cProfile.run(\"G = phrase_graph(phrase, k, max_depth)\", \"stats\")\n",
-    "# G = phrase_graph(phrase, k, max_depth)"
+    "G = phrase_graph(phrase, k, max_depth)"
    ]
   },
   {
@@ -458,67 +584,15 @@
     }
    ],
    "source": [
+    "import cProfile\n",
     "import pstats\n",
     "from pstats import SortKey\n",
     "\n",
+    "cProfile.run(\"G = phrase_graph(phrase, k, max_depth)\", \"stats\")\n",
     "p = pstats.Stats(\"stats\")\n",
     "p.sort_stats(SortKey.TIME)\n",
     "p.print_stats()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_next_k_tokens(sentence, k=5):\n",
-    "    \n",
-    "    \"\"\" Given a sentence get the next top k tokens \"\"\"\n",
-    "\n",
-    "    if isinstance(sentence, str):\n",
-    "        sentence = sentence.encode(\"utf-8\")\n",
-    "    \n",
-    "    model.reset()\n",
-    "    model.eval(model.tokenize(sentence))\n",
-    "\n",
-    "    next_logits = torch.tensor(model.eval_logits)[-1,:]\n",
-    "\n",
-    "    top_values, top_indices = torch.topk(next_logits, k)\n",
-    "    \n",
-    "    next_tokens = [\n",
-    "        model.detokenize([idx]).decode(\"utf-8\") for idx in top_indices\n",
-    "    ]\n",
-    "\n",
-    "    return next_tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[' there', ',', ' Q', '!', ' There']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_next_k_tokens(\"Hello\", 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
